--- a/frontend/src/components/Background/Background.css
+++ b/frontend/src/components/Background/Background.css
@@ -1,7 +1,7 @@
 .background {
   width: 100%;
   height: 100vh;
-  position: fixed;
+  /* position: fixed; */
   float: left;
   top: 0;
   left: 0;
