--- a/frontend/src/components/category/CategoryList.css
+++ b/frontend/src/components/category/CategoryList.css
@@ -7,7 +7,7 @@
     margin: 20px 50px;
 }
 
-.category-heading{
+.section-heading{
     display: flex;
     flex-direction: column;
     justify-content: center;
