--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -14,13 +14,14 @@
   padding-right: 40px;
 }
 
-.contact {
+.navbar-contact {
   border-radius: 50px;
   background-color: rgb(92, 240, 89, 1);
   padding: 10px 38px;
   text-align: center;
 }
 
-.contact:hover {
-  background-color: rgba(92, 240, 89, 0.8);
+.navbar-contact:hover {
+  background-color: white;
+  color: black;
 }
