--- a/frontend/src/components/auth/Auth.css
+++ b/frontend/src/components/auth/Auth.css
@@ -59,3 +59,12 @@
   cursor: pointer;
   width: 100px;
 }
+
+.modal-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 50px;
+  cursor: pointer;
+  color: white;
+}
