--- a/frontend/src/components/Dashboard/Summary.css
+++ b/frontend/src/components/Dashboard/Summary.css
@@ -45,7 +45,9 @@
     color: black;
     padding: 20px 100px;
     text-align: center;
-    margin-right: 400px;
+    margin-right: 200px;
+    padding-top: 50px;
+    margin-left: 100px;
 
 }
 .number1{
@@ -60,6 +62,9 @@
     background-color: lightgrey;
     display: flex;
     flex-direction: row;
+    text-align: center;
+    border-radius: 10px;
+    padding: 15px;
 }
 .auc1{
     display: flex;
@@ -80,7 +85,8 @@
     border-radius: 10px;
     margin-left: 10px;
     padding: 10px 20px;
-    width: 1180px;
+    width: 100%;
+    
 }
 .liveAuction{
     display: flex;
@@ -91,5 +97,13 @@
 }
 h2{
     margin-right: 700px;
+}
+.postedCattleBox{
+    
+     display: flex;
+     overflow-x: auto;
+     justify-content: center;
+     flex-wrap: wrap;
+     gap: 20px;
 }
 
