--- a/frontend/src/components/butcher/butcherCard/Butcher.css
+++ b/frontend/src/components/butcher/butcherCard/Butcher.css
@@ -19,3 +19,8 @@
     display: flex;
     justify-content: space-between;
 }
+
+.butcher-butcher {
+    display: flex;
+    flex-direction: column;
+}
