--- a/frontend/src/components/SideFilter/Filter.css
+++ b/frontend/src/components/SideFilter/Filter.css
@@ -14,7 +14,7 @@
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  width: 300px; /* Adjust based on your layout */
+  width: 300px; 
 }
 
 .category-wrapper p {
