--- a/frontend/src/components/cattle-card/CattleCard.css
+++ b/frontend/src/components/cattle-card/CattleCard.css
@@ -7,8 +7,9 @@
     width: 350px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 10px;
+    /* margin: 10px; */
     position: relative;
+    cursor: pointer;
   }
   
   .cattle-card img {
