--- a/frontend/src/components/Background/Background.css
+++ b/frontend/src/components/Background/Background.css
@@ -1,19 +1,22 @@
 .background {
   width: 100%;
   height: 100vh;
-  /* position: fixed; */
-  float: left;
-  top: 0;
+  top: 10vh;
   left: 0;
   object-fit: cover;
   z-index: -1;
-  filter:brightness(80%);
+  filter: brightness(80%);
 }
 
-@keyframes fadeIn{
-  from {opacity: 0;}
-  to {opacity: 1;}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-.fade-in{
+
+.fade-in {
   animation: fadeIn 500ms ease-in-out;
 }
