--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "poppins";
-}
+@import "keep-react/css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+  
