--- a/frontend/src/components/Dashboard/Summary.css
+++ b/frontend/src/components/Dashboard/Summary.css
@@ -1,7 +1,13 @@
+.Headline{
+    margin-left: 70px;
+    font-size: 60px;
+}
+
 .full{
     display: flex;
     flex-direction: row;
     padding: 0;
+    height: 60%;
     
 }
 
@@ -20,7 +26,7 @@
 .vl{
     border-left: 2px solid black;
     border-radius: 100px;
-    height: 1000px;
+    height: 1400px;
     margin-top: 20px;
 }
 .righty{
@@ -37,21 +43,49 @@
     flex-direction: row;
     margin: 10px;
     padding: 10px;
+    height: auto;
     
+}
+
+.New1{
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    
+    background-color: rgb(113, 156, 137);
+    font-weight: bold;
+    color: black;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 60px;
+    font-size: 30px;
+    margin: 10px 0px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.7);
+    text-align: center
+} 
+
+.New1:hover{
+    text-decoration: none;
+    color: white;
+    background-color: rgb(26, 39, 69);
+    transition-duration: .5s;
+    box-shadow: 0 8px 22px rgba(0, 0, 0, 0.7);
 }
 .Statistics{
     background-color: lightblue;
     border-radius: 10px;
     color: black;
-    padding: 20px 100px;
+    padding: 0px 70px;
     text-align: center;
-    margin-right: 200px;
-    padding-top: 50px;
-    margin-left: 100px;
+    margin-right: 60px;
+    padding-top: 60px;
+    margin-left: 50px;
 
 }
 .number1{
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 600;
 }
 .number{
@@ -64,17 +98,18 @@
     flex-direction: row;
     text-align: center;
     border-radius: 10px;
-    padding: 15px;
+    padding: 7px;
 }
 .auc1{
     display: flex;
     flex-direction: column;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 .auc2{
     display: flex;
     flex-direction: column;
-    margin-top: 53px;
+    margin-top: 70px;
+    margin-right:  20px;
 }
 .Time{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -94,6 +129,9 @@
     margin: 10px;
     text-align: center;
     font-size: large;
+}
+.cattles{
+    margin-bottom: 100px;
 }
 h2{
     margin-right: 700px;
