--- a/frontend/src/components/Auction/CustomerAuction.css
+++ b/frontend/src/components/Auction/CustomerAuction.css
@@ -4,17 +4,15 @@
 .Customer h1{
     position: absolute;
     left: 400px;
+    margin-top: 30px;
+   
+    font-size: 80px;
 }
 .thefull{
     display: flex;
     flex-direction: row;
 }
-.aucleft{
-    display: grid;
-    margin: 40px 70px;
-    margin-bottom: 150px;
-    
-}
+
 .aucleft div:hover{
     font-size: 15px;
     cursor: pointer;
@@ -27,5 +25,6 @@
     border: 2px solid black;
 }
 .Auctions{
-    margin-top: 60px;
+    margin-top: 100px;
+    margin-left: 60px;
 }
