--- a/frontend/src/components/Auction/CustomerAuction.css
+++ b/frontend/src/components/Auction/CustomerAuction.css
@@ -1,30 +1,62 @@
-.CA{
-    width: 768px;
+.CA {
+  width: 768px;
 }
-.Customer h1{
-    position: absolute;
-    left: 400px;
-    margin-top: 30px;
-   
-    font-size: 80px;
+.Customer h1 {
+  position: absolute;
+  left: 400px;
+  margin-top: 30px;
+
+  font-size: 80px;
 }
-.thefull{
-    display: flex;
-    flex-direction: row;
+.sidebar {
+  width: 250px;
+  height: auto;
+  background-color: rgb(212, 222, 227);
+  padding-top: 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding-left: 20px;
+  padding-right: 100px;
 }
 
-.aucleft div:hover{
-    font-size: 15px;
-    cursor: pointer;
+.sidebar-item {
+  color: black;
+  font-size: 17px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, padding-left 0.3s ease;
+  border-radius: 5px;
 }
-.vl1{
-    margin-top: 30px;
-    margin-left: 50px;
-    margin-right: 70px;
-    height: auto;
-    border: 2px solid black;
+
+.sidebar-item:hover {
+  background-color: #ff6f61;
+  padding-left: 20px;
+  padding-right: 20px;
 }
-.Auctions{
-    margin-top: 100px;
-    margin-left: 60px;
+
+.sidebar-item.active {
+  background-color: #e45b4e;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.thefull {
+  display: flex;
+  flex-direction: row;
+}
+
+.aucleft div:hover {
+  font-size: 15px;
+  cursor: pointer;
+}
+.vl1 {
+  margin-top: 30px;
+  margin-left: 50px;
+  margin-right: 70px;
+  height: auto;
+  border: 2px solid black;
+}
+.Auctions {
+  margin-top: 100px;
+  margin-left: 60px;
 }
