--- a/frontend/src/components/Auction/CustomerAuction.css
+++ b/frontend/src/components/Auction/CustomerAuction.css
@@ -8,37 +8,12 @@
 
   font-size: 80px;
 }
-.sidebar {
-  width: 250px;
-  height: auto;
-  background-color: rgb(212, 222, 227);
-  padding-top: 80px;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  padding-left: 20px;
-  padding-right: 100px;
+#lefty {
+  /* padding-right: 100px; */
 }
 
-.sidebar-item {
-  color: black;
-  font-size: 17px;
-  padding: 10px 20px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, padding-left 0.3s ease;
-  border-radius: 5px;
-}
-
-.sidebar-item:hover {
-  background-color: #ff6f61;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.sidebar-item.active {
-  background-color: #e45b4e;
-  padding-left: 20px;
-  padding-right: 20px;
+.auc_name {
+  font-size: 18px;
 }
 .thefull {
   display: flex;
@@ -49,13 +24,7 @@
   font-size: 15px;
   cursor: pointer;
 }
-.vl1 {
-  margin-top: 30px;
-  margin-left: 50px;
-  margin-right: 70px;
-  height: auto;
-  border: 2px solid black;
-}
+
 .Auctions {
   margin-top: 100px;
   margin-left: 60px;
