--- a/frontend/src/components/Auction/customer_card.css
+++ b/frontend/src/components/Auction/customer_card.css
@@ -50,13 +50,13 @@
   padding: 3px 10px;
 }
 .ap {
-  font-size: 18px;
+  font-size: 16px;
 }
 .cattle_card .cattleprice {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
   color: #960c1e;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 .cattle_card .BID {
@@ -64,11 +64,11 @@
   color: white;
   padding: 12px 20px;
   border: none;
-  border-radius: 30px;
+  border-radius: 16px;
   font-size: 1.1rem;
   font-weight: bold;
   cursor: pointer;
-  margin-top: 20px;
+  margin-bottom: 20px;
   transition: background-color 0.3s ease;
   width: 100%;
 }
