--- a/frontend/src/components/AuctionCard/AuctionCard.css
+++ b/frontend/src/components/AuctionCard/AuctionCard.css
@@ -22,39 +22,38 @@
   font-family: Arial, Helvetica, sans-serif;
   margin-left: 20px;
   margin-top: 15px;
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
 }
-
+#lefty {
+}
 .righty {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  flex-wrap: nowrap;
   align-items: end;
 }
 .Ongoing {
   color: azure;
   background-color: #059144;
-  padding: 16px;
+  padding: 10px;
   font-size: 15px;
   border-radius: 8px;
-  margin-bottom: 20px;
 }
 .Ended {
   color: azure;
   background-color: rgb(193, 21, 21);
-  padding: 16px;
+  padding: 10px;
   font-size: 15px;
   border-radius: 8px;
-  margin-bottom: 20px;
 }
+
 .auc_name {
-  font-size: 20px;
-  padding: 20px;
-  margin-right: 250px;
+  margin-left: 20px;
 }
+
 .timer {
   font-size: 20px;
-  top: 30px;
+  /* top: 30px; */
 }
 .timer00 {
   background-color: black;
@@ -66,8 +65,7 @@
 .NOC {
   font-size: 18px;
   font-weight: bolder;
-  margin-left: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  /* margin-left: 20px; */
 }
 .quantity {
   font-weight: bolder;
